--- a/about.html
+++ b/about.html
@@ -17,11 +17,11 @@
 		    <input type="checkbox" id="toggle">					
 	        <div id="nav-items">
 	           	<a href="about.html">About Us</a>
-				<a href="#">Health</a>
-				<a href="#">Education</a>
-				<a href="#">Environment</a>
+				<a href="health.html">Health</a>
+				<a href="education.html">Education</a>
+				<a href="environment.html">Environment</a>
 			</div>
-			<a href="#" class="donate" id="donate-nav">Donate</a>
+			<a href="donate.html" class="donate" id="donate-nav">Donate</a>
 		</nav>
 	</header>		
 	<div id="about-header">
@@ -37,7 +37,7 @@
 		</section>
 		<section id="board">
 			<h2>Board</h2>
-			<ul>
+			<ul class="no-bullets">
 				<li><h4>Co-Presidents, Founders</h4>
 				<p>Julio Ndwenya</p>
 				<p>Katelyn Pace</p></li>
