--- a/contact.html
+++ b/contact.html
@@ -18,13 +18,12 @@
 	        <div id="nav-items">
 	           	<a href="about.html">About Us</a>
 				<a href="health.html">Health</a>
-				<a href="#">Education</a>
-				<a href="#">Environment</a>
+				<a href="education.html">Education</a>
+				<a href="environment.html">Environment</a>
 			</div>
 			<a href="#" class="donate" id="donate-nav">Donate</a>
 		</nav>
 	</header>
-	
 	<div id="about-header">
 		<h1>Contact Us</h1>
 	</div>
