--- a/education.html
+++ b/education.html
@@ -7,7 +7,7 @@
 	<!--[if lt IE 9]>
         <script src="bower_components/html5shiv/dist/html5shiv.js"></script>
     <![endif]-->
-	<title>Health Projects</title>
+	<title>Wangama Eduction</title>
 </head>
 <body>
 	<header class="clearfix">
@@ -19,39 +19,34 @@
 	           	<a href="about.html">About Us</a>
 				<a href="health.html">Health</a>
 				<a href="education.html">Education</a>
-				<a href="environment.html">Environment</a>
+				<a href="#">Environment</a>
 			</div>
 			<a href="donate.html" class="donate" id="donate-nav">Donate</a>
 		</nav>
 	</header>
-	<div id="health-header">
-		<h1>Health</h1>
-		<h3>Supporting healthcare of Wangama is a priority of local officials.</h3>
+	<div id="education-header">
+		<h1>Education</h1>
+		<h3>Wangama Ward currently has three primary schools (one per village) with approximately 1,200 students, and one all-girls secondary school.</h3>
 		<a class="donate" id="donate-header" href="donate.html">DONATE</a>
 	</div>
 	<section id="topic" class="clearfix">
-		<div id="health-projects">
-			<h2>Health Projects</h2>
-				<div>
-					<p>Health Center</p>
-					<a href="health-center.html"><img src="images/health-center.jpg" alt="Wangama Health Center" title="Wangama Health Center"></a>
-					<a href="health-center.html" class="btn">Learn More</a>
-				</div>
-				<div>
-					<p>HIV/AIDS Support</p>
-					<a href="hiv-aids.html"><img src="images/wangama-drums.jpg" alt="HIV/AIDS Support group drum circle" title="HIV/AIDS Support group drum circle"></a>
-					<a href="hiv-aids.html" class="btn">Learn More</a>
-				</div>
-				<div>
-					<p>Medicinal Garden</p>
-					<a href="medicinal-garden.html"><img src="images/medicinal-garden.jpg" alt="Wangama Medicinal Garden" title="Wangama Medicinal Garden"></a>
-					<a href="medicinal-garden.html" class="btn">Learn More</a>
-				</div>
+		<div id="education-projects">
+			<h2>Education Projects</h2>
+			<div>
+				<p>Orphans & Students with Special Needs</p>
+				<a href="orphans.html"><img src="images/kids-backpacks.jpg" alt="Kids in Wangama getting donated backpacks" title="Kids in Wangama getting donated backpacks"></a>
+				<a href="orphans.html" class="btn">Learn More</a>
+			</div>
+			<div>
+				<p>Mdandu Primary School Building Project</p>
+				<a href="primary-school.html"><img src="images/primary-school.jpg" alt="Mdandu Primary School being built" title="Mdandu Primary School being built"></a>
+				<a href="primary-school.html" class="btn">Learn More</a>
+			</div>
 		</div>
 	</section>
 	<section class="join">
 		<h2>Join our mailing list!</h2>
-		<p>Stay updated on how you can help with our ongoing health projects.</p>
+		<p>Stay updated on how you can help with our ongoing education projects.</p>
 		<form>
 			<label for="emailAddress">Email:</label><br>
 			<input type="email" id="emailAddress">				
