--- a/environment.html
+++ b/environment.html
@@ -7,16 +7,16 @@
 	<!--[if lt IE 9]>
         <script src="bower_components/html5shiv/dist/html5shiv.js"></script>
     <![endif]-->
-	<title>Health Projects</title>
+	<title>Environment Projects</title>
 </head>
 <body>
 	<header class="clearfix">
 		<nav class="clearfix">
 			<a id="logo"  href="index.html"><img src="images/Wangama-icon-black.png" alt="wangama foundation logo" title="wangama foundation"></a>
 			<label for="toggle">Menu</label>
-		    <input type="checkbox" id="toggle">					
-	        <div id="nav-items">
-	           	<a href="about.html">About Us</a>
+			<input type="checkbox" id="toggle">					
+	        <div id="nav-items">		
+				<a href="about.html">About Us</a>
 				<a href="health.html">Health</a>
 				<a href="education.html">Education</a>
 				<a href="environment.html">Environment</a>
@@ -24,34 +24,32 @@
 			<a href="donate.html" class="donate" id="donate-nav">Donate</a>
 		</nav>
 	</header>
-	<div id="health-header">
-		<h1>Health</h1>
-		<h3>Supporting healthcare of Wangama is a priority of local officials.</h3>
+	<div id="environment-header">
+		<h1>Environment Projects</h1>
 		<a class="donate" id="donate-header" href="donate.html">DONATE</a>
 	</div>
 	<section id="topic" class="clearfix">
-		<div id="health-projects">
-			<h2>Health Projects</h2>
-				<div>
-					<p>Health Center</p>
-					<a href="health-center.html"><img src="images/health-center.jpg" alt="Wangama Health Center" title="Wangama Health Center"></a>
-					<a href="health-center.html" class="btn">Learn More</a>
-				</div>
-				<div>
-					<p>HIV/AIDS Support</p>
-					<a href="hiv-aids.html"><img src="images/wangama-drums.jpg" alt="HIV/AIDS Support group drum circle" title="HIV/AIDS Support group drum circle"></a>
-					<a href="hiv-aids.html" class="btn">Learn More</a>
-				</div>
-				<div>
-					<p>Medicinal Garden</p>
-					<a href="medicinal-garden.html"><img src="images/medicinal-garden.jpg" alt="Wangama Medicinal Garden" title="Wangama Medicinal Garden"></a>
-					<a href="medicinal-garden.html" class="btn">Learn More</a>
-				</div>
-		</div>
+		<div id="environment-projects">
+			<h2>Environment Projects</h2>
+			<div>
+				<p>Avocado Trees</p>
+				<a href="avovado.html"><img src="images/avocado-trees.jpg" alt="Wangama Villagers with Avocado Trees" title="Wangama Villagers with Avocado Trees"></a>
+				<a href="avocado.html" class="btn">Learn More</a>
+			</div>
+			<div>
+				<p>Women's Empowerment</p>
+				<a href="women.html"><img class src="images/group-women.jpg" alt="Women's Empowerment group in wangama" title="Women's Empowerment group in wangama"></a>
+				<a href="women.html" class="btn">Learn More</a>
+			</div>
+			<div>
+				<p>Renewable Energy</p>
+				<a href="renewable-energy.html"><img src="images/wangama-hills.jpg" alt="wangama landscape" title="wangama landscape">
+				<a href="renewable-energy.html" class="btn">Learn More</a>
+			</div>
 	</section>
 	<section class="join">
 		<h2>Join our mailing list!</h2>
-		<p>Stay updated on how you can help with our ongoing health projects.</p>
+		<p>Stay updated on how you can help with our ongoing environment projects.</p>
 		<form>
 			<label for="emailAddress">Email:</label><br>
 			<input type="email" id="emailAddress">				
