--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
 			<input type="checkbox" id="toggle">					
 	        <div id="nav-items">		
 				<a href="about.html">About Us</a>
-				<a href="#">Health</a>
-				<a href="#">Education</a>
-				<a href="#">Environment</a>
+				<a href="health.html">Health</a>
+				<a href="education.html">Education</a>
+				<a href="environment.html">Environment</a>
 			</div>
-			<a href="#" class="donate" id="donate-nav">Donate</a>
+			<a href="donate.html" class="donate" id="donate-nav">Donate</a>
 		</nav>
 	</header>
 	<div id="header-items">
 		<img id="full-logo" src="images/Wangama-Logo-Horizontal.png" alt="wangama foundation" title="wangama foundation">
 		<h3>Supporting health, education, and environment projects in Wangama, Tanzania.</h3>
-		<a class="donate" id="donate-header" href="#">DONATE</a>
+		<a class="donate" id="donate-header" href="donate.html">DONATE</a>
 	</div>
 	<section>
 		<h2>What We Do</h2>
@@ -37,17 +37,17 @@
 		<div class="top3">
 			<h2 id="donate">Donate</h2>
 			<p>Donations of all kinds are welcome! You can give monetary support for ongoing health, education, and environment projects, or donations of resources, such as school and medical supplies.</p>
-			<a href="#" class="donate">Donate</a>
+			<a href="donate.html" class="donate">Donate</a>
 		</div>
 		<div class="top3">
-			<h2 id="involved">Support</h2>
+			<h2 id="yellow">Support</h2>
 			<p>Wangama Foundation would love to connect with you. Please reach out with ideas of how you can support our ongoing projects.</p>
-			<a href="#" class="btn">Learn More</a>
+			<a href="contact.html" class="btn">Learn More</a>
 		</div>
 		<div class="top3">
-			<h2 id="mission">Mission</h2>
+			<h2 id="blue">Mission</h2>
 			<p>Wangama Foundation's mission is to improve the standard of healthcare and education, to support environmental development, and to create community-involved opportunities.</p> 
-			<a href="#" class="btn">Learn More</a>
+			<a href="about.html" class="btn">Learn More</a>
 		</div>
 	</section>
 	<section class="gallery clearfix">
