--- a/donate.html
+++ b/donate.html
@@ -19,7 +19,7 @@
 	           	<a href="about.html">About Us</a>
 				<a href="health.html">Health</a>
 				<a href="education.html">Education</a>
-				<a href="#">Environment</a>
+				<a href="environment.html">Environment</a>
 			</div>
 			<a href="https://donorbox.org/wangama-foundation" class="donate" id="donate-nav" target="_blank">Donate</a>
 		</nav>
