--- a/environment.html
+++ b/environment.html
@@ -25,7 +25,7 @@
 		</nav>
 	</header>
 	<div id="environment-header">
-		<h1>Environment Projects</h1>
+		<h1>Environment</h1>
 		<a class="donate" id="donate-header" href="donate.html">DONATE</a>
 	</div>
 	<section id="topic" class="clearfix">
