--- a/avocado.html
+++ b/avocado.html
@@ -7,7 +7,7 @@
 	<!--[if lt IE 9]>
         <script src="bower_components/html5shiv/dist/html5shiv.js"></script>
     <![endif]-->
-	<title>Environment Projects</title>
+	<title>Avocado Trees</title>
 </head>
 <body>
 	<header class="clearfix">
@@ -25,27 +25,32 @@
 		</nav>
 	</header>
 	<div id="environment-header">
-		<h1>Environment</h1>
+		<h1>Avocado Trees</h1>
 		<a class="donate" id="donate-header" href="donate.html">DONATE</a>
 	</div>
-	<section id="topic" class="clearfix">
-		<div id="environment-projects">
-			<h2>Environment Projects</h2>
-			<div>
-				<p>Avocado Trees</p>
-				<a href="avocado.html"><img src="images/avocado-trees.jpg" alt="Wangama Villagers with Avocado Trees" title="Wangama Villagers with Avocado Trees"></a>
-				<a href="avocado.html" class="btn">Learn More</a>
-			</div>
-			<div>
-				<p>Women's Empowerment</p>
-				<a href="women.html"><img class src="images/group-women.jpg" alt="Women's Empowerment group in wangama" title="Women's Empowerment group in wangama"></a>
-				<a href="women.html" class="btn">Learn More</a>
-			</div>
-			<div>
-				<p>Renewable Energy</p>
-				<a href="renewable-energy.html"><img src="images/wangama-hills.jpg" alt="wangama landscape" title="wangama landscape">
-				<a href="renewable-energy.html" class="btn">Learn More</a>
-			</div>
+	<section id="side-by-side" class="clearfix">
+		<div id="copy">
+			<h2>About</h2>
+			<p>Avocados are not only tasty, they are a wonderful source of nutrition and income for families in Wangama. There is increasingly a demand for avocados in nearby towns and families benefit greatly from selling this fruit. Our Avocado Tree Project began in 2018 and continues to flourish.</p>
+			<p>In 2019, the orphans groups at each of the 3 primary schools in Wangama joined the Avocado Tree Project for income generation for the orphans groups. Funds from avocado sales will be used to purchase uniforms, school supplies, and savings for technical or secondary school education.</p>
+			<h2>Tree Distribution</h2>
+			<ul>
+				<li>64 trees to 48 families</li>
+				<li>1 avocado tree was planted in the courtyard of the Health Center to commemorate the growing health of Wangama </li>
+				<li>Orphans groups at the 3 primary schools received 33 trees each (99 trees total) </li>
+			</ul>
+		</div>
+		<div id="photo">
+			<img src="images/avocado-tree-recipient.jpg" alt="A recipient of an Avocado tree" title="Avocado Tree Recipient">
+			<img src="images/avocado-tree-recipient-2.jpg" alt="A recipient of an Avocado tree" title="Avocado Tree Recipient">
+		</div>
+	</section>
+	<section id="waystohelp">
+		<h2 id="donate">Future Plans</h2>
+		<ul>
+			<li>Continue to grow the avocado tree project by increasing tree distribution</li>
+			<li>Work with agricultural office to increase education on avocado harvesting and selling </li>
+		</ul>
 	</section>
 	<section class="join">
 		<h2>Join our mailing list!</h2>
