--- a/education.html
+++ b/education.html
@@ -26,12 +26,12 @@
 	</header>
 	<div id="education-header">
 		<h1>Education</h1>
-		<h3>Wangama Ward currently has three primary schools (one per village) with approximately 1,200 students, and one all-girls secondary school.</h3>
 		<a class="donate" id="donate-header" href="donate.html">DONATE</a>
 	</div>
 	<section id="topic" class="clearfix">
 		<div id="education-projects">
 			<h2>Education Projects</h2>
+			<p>Wangama Ward currently has three primary schools (one per village) with approximately 1,200 students, and one all-girls secondary school.</p>
 			<div>
 				<p>Orphans & Students with Special Needs</p>
 				<a href="orphans.html"><img src="images/kids-backpacks.jpg" alt="Kids in Wangama getting donated backpacks" title="Kids in Wangama getting donated backpacks"></a>
