--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 		<img class src="images/wangama-kids.jpg" alt="two people walking in wangama" title="walking in wangama">
 		<img class src="images/wangama-backpack.jpg" alt="children getting donated backpacks" title="donations to wangama">
 		<img class src="images/wangama-drums.jpg" alt="a drum circle in wangama" title="wangama drum circle">
-		<img class src="images/group-women.jpg" alt="a group of women in wangama" title="wangama women">
+		<img class src="images/group-women.jpg" alt="Women's Empowerment group in wangama" title="Women's Empowerment group in wangama">
 		<img class src="images/wangama-village.jpg" alt="people outside a house in wangama" title="the village">
 		<img class src="images/wangama-cooking.jpg" alt="women cooking in wangama" title="women cooking">
 	</section>
