--- a/donate.html
+++ b/donate.html
@@ -24,7 +24,7 @@
 			<a href="https://donorbox.org/wangama-foundation" class="donate" id="donate-nav" target="_blank">Donate</a>
 		</nav>
 	</header>
-	<div id="header-items">
+	<div id="donateheader">
 		<h1>Donate</h1>
 		<h3>Please donate to one of the many projects in Wangama Village. Every contribution counts!</h3>
 		<a class="donate" id="donate-header" href="https://donorbox.org/wangama-foundation" target="_blank">DONATE</a>
@@ -56,10 +56,10 @@
 	</section>
 	<footer class="clearfix">
 		<div class="social">
-			<a href="https://www.facebook.com/WangamaFoundation/"><img class="social" src="images/facebook.png" alt="facebook icon" title="facebook"></a>
-			<a href="https://www.instagram.com/wangamafoundation/?hl=en"><img class="social" src="images/instagram.png" alt="instagram icon" title="instagram icon"></a>
+			<a target="_blank" href="https://www.facebook.com/WangamaFoundation/"><img class="social" src="images/facebook.png" alt="facebook icon" title="facebook"></a>
+			<a target="_blank" href="https://www.instagram.com/wangamafoundation/?hl=en"><img class="social" src="images/instagram.png" alt="instagram icon" title="instagram icon"></a>
 		</div>
-		<a href="mailto:wangama.foundation@gmail.com">wangama.foundation@gmail.com</a>
+		<a target="_blank" href="mailto:wangama.foundation@gmail.com">wangama.foundation@gmail.com</a>
 	</footer>
 </body>
 </html>
