--- a/environment.html
+++ b/environment.html
@@ -58,10 +58,10 @@
 	</section>
 	<footer class="clearfix">
 		<div class="social">
-			<a href="https://www.facebook.com/WangamaFoundation/"><img class="social" src="images/facebook.png" alt="facebook icon" title="facebook"></a>
-			<a href="https://www.instagram.com/wangamafoundation/?hl=en"><img class="social" src="images/instagram.png" alt="instagram icon" title="instagram icon"></a>
+			<a target="_blank" href="https://www.facebook.com/WangamaFoundation/"><img class="social" src="images/facebook.png" alt="facebook icon" title="facebook"></a>
+			<a target="_blank" href="https://www.instagram.com/wangamafoundation/?hl=en"><img class="social" src="images/instagram.png" alt="instagram icon" title="instagram icon"></a>
 		</div>
-		<a href="mailto:wangama.foundation@gmail.com">wangama.foundation@gmail.com</a>
+		<a target="_blank" href="mailto:wangama.foundation@gmail.com">wangama.foundation@gmail.com</a>
 	</footer>
 </body>
 </html>
