--- a/health-center.html
+++ b/health-center.html
@@ -26,31 +26,28 @@
 	</header>
 	<div id="health-header">
 		<h1>Health Center</h1>
-		<h3>The HIV/AIDS Clinic was established in 2017 through collaboration with USA donors and Wangama villagers. </h3>
 		<a class="donate" id="donate-header" href="#">DONATE</a>
 	</div>
 	<section id="side-by-side" class="clearfix">
 		<div id="copy">
 			<h2>About the Health Center</h2>
-			<p>Since February 2018, Wangama men, women and children started receiving HIV testing, HIV medications, and nutrition consultation in their community instead of traveling to the closest clinic, often a day's journey. This is something we take very seriously, and our team is working each and every day to make a positive impact.</p>
+			<p>The HIV/AIDS Clinic was established in 2017 through collaboration with USA donors and Wangama villagers. Since February 2018, Wangama men, women and children started receiving HIV testing, HIV medications, and nutrition consultation in their community instead of traveling to the closest clinic, often a day's journey. This is something we take very seriously, and our team is working each and every day to make a positive impact.</p>
+			<h2>Obtaining Health Center Status</h2>
+			<p>The Wangama Ward officials and medical team determined the HIV clinic building is large enough, with adequate capacity to obtain Health Center status. Achieving Health Center status directly increases the catchment of care we can offer to the Ward. All villagers, including those living with HIV/AIDS, will have access to inpatient medical care and services for most  complications (opportunistic infections, malaria, upper respiratory care, etc.). Wangama Foundation will continue to play a huge part in supporting this initiative.</p>
 		</div>
 		<div id="photo">
 			<img src="images/health-center.jpg">
 		</div>
 	</section>
 	<section id="waystohelp">
-		<h2 id="blue">Obtaining Health Center Status</h2>
-		<p>The Wangama Ward officials and medical team determined the HIV clinic building is large enough, with adequate capacity to obtain Health Center status. Achieving Health Center status directly increases the catchment of care we can offer to the Ward. All villagers, including those living with HIV/AIDS, will have access to inpatient medical care and services for most  complications (opportunistic infections, malaria, upper respiratory care, etc.). Wangama Foundation will continue to play a huge part in supporting this initiative.</p>
-	</section>
-	<section>
-			<h2>Wangama Foundation Contribution</h2>
+			<h2 id="blue">Wangama Foundation Contributions</h2>
 			<ul>
 				<li>Funds for Medical Beds</li>
 				<li>Electrical Wiring Material</li>
 				<li>Funds for Medical Supply Cabinets</li>
 				<li>Medical Supplies (gloves, gauze, scrubs, scissors, tape, oral rehydration salts, health education materials, etc.)</li>
 			</ul>
-		<h2>Future Plans</h2>
+		<h2 id="donate">Future Plans</h2>
 		<ul>
 			<li>Support Health Center with Desired Materials: 
 				<p>Bed</p>
@@ -69,16 +66,21 @@
 			<li>Ambulance for Imalilo and Ikanga villages</li>
 		</ul>
 	</section>
+	<section>
+		<h2>Other Health Projects</h2>
+		<p><a href="hiv-aids.html">HIV/AIDS Support</a></p>
+		<p><a href="medicinal-garden.html">Medicinal Garden</a></p>
+	</section>
 	<section class="join">
 		<h2>Donate Medical Supplies!</h2>
 		<p>Wangama Health Center is in need of medical supplies such as gloves, scissors, gauze, medical tape, and masks. If you are interested in donating medical supplies, please email <a href="mailto:wangama.foundation@gmail.com">wangama.foundation@gmail.com</a> for shipping instructions.</p>
 	</section>
 	<footer class="clearfix">
 		<div class="social">
-			<a href="https://www.facebook.com/WangamaFoundation/"><img class="social" src="images/facebook.png" alt="facebook icon" title="facebook"></a>
-			<a href="https://www.instagram.com/wangamafoundation/?hl=en"><img class="social" src="images/instagram.png" alt="instagram icon" title="instagram icon"></a>
+			<a target="_blank" href="https://www.facebook.com/WangamaFoundation/"><img class="social" src="images/facebook.png" alt="facebook icon" title="facebook"></a>
+			<a target="_blank" href="https://www.instagram.com/wangamafoundation/?hl=en"><img class="social" src="images/instagram.png" alt="instagram icon" title="instagram icon"></a>
 		</div>
-		<a href="mailto:wangama.foundation@gmail.com">wangama.foundation@gmail.com</a>
+		<a target="_blank" href="mailto:wangama.foundation@gmail.com">wangama.foundation@gmail.com</a>
 	</footer>
 </body>
 </html>
