--- a/health.html
+++ b/health.html
@@ -26,7 +26,6 @@
 	</header>
 	<div id="health-header">
 		<h1>Health</h1>
-		<h3>Supporting healthcare of Wangama is a priority of local officials.</h3>
 		<a class="donate" id="donate-header" href="donate.html">DONATE</a>
 	</div>
 	<section id="topic" class="clearfix">
@@ -60,10 +59,10 @@
 	</section>
 	<footer class="clearfix">
 		<div class="social">
-			<a href="https://www.facebook.com/WangamaFoundation/"><img class="social" src="images/facebook.png" alt="facebook icon" title="facebook"></a>
-			<a href="https://www.instagram.com/wangamafoundation/?hl=en"><img class="social" src="images/instagram.png" alt="instagram icon" title="instagram icon"></a>
+			<a target="_blank" href="https://www.facebook.com/WangamaFoundation/"><img class="social" src="images/facebook.png" alt="facebook icon" title="facebook"></a>
+			<a target="_blank" href="https://www.instagram.com/wangamafoundation/?hl=en"><img class="social" src="images/instagram.png" alt="instagram icon" title="instagram icon"></a>
 		</div>
-		<a href="mailto:wangama.foundation@gmail.com">wangama.foundation@gmail.com</a>
+		<a target="_blank" href="mailto:wangama.foundation@gmail.com">wangama.foundation@gmail.com</a>
 	</footer>
 </body>
 </html>
