--- a/hiv-aids.html
+++ b/hiv-aids.html
@@ -26,28 +26,32 @@
 	</header>
 	<div id="health-header">
 		<h1>HIV/AIDS Support</h1>
-		<h3>The HIV/AIDS support group, "Kikundi cha Maisha Bora" (Group for Better Life) was established in 2009 as a Peace Corps project.</h3>
 		<a class="donate" id="donate-header" href="donate.html">DONATE</a>
 	</div>
 	<section id="side-by-side" class="clearfix">
 		<div id="copy">
 			<h2>Kikundi cha Maisha Bora</h2>
-			<p>The group has grown drastically to nearly 80 members; an all-inclusive group of people living with and without HIV/AIDS. Currently, the group has a choir and drama troupe, teaching villagers and students about HIV transmission, importance of testing, and availability of HIV medications. As part of a Wangama Foundation initiative, the Group for Better Life has a bee keeping business.</p>
+			<p>The HIV/AIDS support group, "Kikundi cha Maisha Bora" (Group for Better Life) was established in 2009 as a Peace Corps project. The group has grown drastically to nearly 80 members; an all-inclusive group of people living with and without HIV/AIDS. Currently, the group has a choir and drama troupe, teaching villagers and students about HIV transmission, importance of testing, and availability of HIV medications. As part of a Wangama Foundation initiative, the Group for Better Life has a bee keeping business.</p>
 		</div>
 		<div id="photo">
 			<img src="images/hiv-aids-group.jpg" alt="HIV/AIDS Support Group" title="HIV/AIDS Support Group">
 		</div>
 	</section>
 	<section id="waystohelp">	
-			<h2 id="yellow">Beekeeping Business:</h2>
+			<h2 id="blue">Beekeeping Business:</h2>
 				<p>20 beekeeping boxes provided to the group to start the business</p>
 				<p>Begin selling honey in 2019 for income-generation</p>
 				<p>Group for Better Life also uses honey for immune boosting qualities</p>
-			<h2 id="blue">Future Plans:</h2>
+			<h2 id="donate">Future Plans:</h2>
 				<p>As the beekeeping project grows, we wish to continue supporting the group with personal protective equipment </p>
 				<p>Obtain honey straining equipment </p>
 				<p>Income generation and business management education</p>
 				<p>Continuing education of people living with HIV/AIDS (nutrition, dental care, opportunistic infections, sexual health)</p>
+	</section>
+	<section>
+		<h2>Other Health Projects</h2>
+		<p><a href="health-center.html">Health Center</a></p>
+		<p><a href="medicinal-garden.html">Medicinal Garden</a></p>
 	</section>
 	<section class="join">
 		<h2>Donate Medical Supplies!</h2>
@@ -55,10 +59,10 @@
 	</section>
 	<footer class="clearfix">
 		<div class="social">
-			<a href="https://www.facebook.com/WangamaFoundation/"><img class="social" src="images/facebook.png" alt="facebook icon" title="facebook"></a>
-			<a href="https://www.instagram.com/wangamafoundation/?hl=en"><img class="social" src="images/instagram.png" alt="instagram icon" title="instagram icon"></a>
+			<a target="_blank" href="https://www.facebook.com/WangamaFoundation/"><img class="social" src="images/facebook.png" alt="facebook icon" title="facebook"></a>
+			<a target="_blank" href="https://www.instagram.com/wangamafoundation/?hl=en"><img class="social" src="images/instagram.png" alt="instagram icon" title="instagram icon"></a>
 		</div>
-		<a href="mailto:wangama.foundation@gmail.com">wangama.foundation@gmail.com</a>
+		<a target="_blank" href="mailto:wangama.foundation@gmail.com">wangama.foundation@gmail.com</a>
 	</footer>
 </body>
 </html>
