--- a/medicinal-garden.html
+++ b/medicinal-garden.html
@@ -26,11 +26,12 @@
 	</header>
 	<div id="health-header">
 		<h1>Medicinal Garden</h1>
-		<h3>With the opening of the new Health Center, Wangama Foundation Board Members and Health Center personnel created a medicinal garden for both medicinal purposes and as a demonstration garden for villages.</h3>
 		<a class="donate" id="donate-header" href="#">DONATE</a>
 	</div>
 	<section id="side-by-side" class="clearfix">
 		<div id="copy">
+			<h2>The Medicinal Garden</h2>
+			<p>With the opening of the new Health Center, Wangama Foundation Board Members and Health Center personnel created a medicinal garden for both medicinal purposes and as a demonstration garden for villages.</p>
 			<h2>Plants/Uses</h2>
 			<ul class="bullets">
 				<li>Lemongrass: Fever</li>
@@ -47,11 +48,16 @@
 		</div>
 	</section>
 	<section id="waystohelp">
-		<h2>Future Plans</h2>
-		<ul class="bullets">
+		<h2 id="donate">Future Plans</h2>
+		<ul>
 			<li>ANAMED training on medicinal plants and preparation at Wangama Health Center</li>
 			<li>Introduction of Moringa to garden</li>
 		</ul>
+	</section>
+	<section>
+		<h2>Other Health Projects</h2>
+		<p><a href="health-center.html">Health Center</a></p>
+		<p><a href="hiv-aids.html">HIV/AIDS Support</a></p>
 	</section>
 	<section class="join">
 		<h2>Donate Medical Supplies!</h2>
@@ -59,10 +65,10 @@
 	</section>
 	<footer class="clearfix">
 		<div class="social">
-			<a href="https://www.facebook.com/WangamaFoundation/"><img class="social" src="images/facebook.png" alt="facebook icon" title="facebook"></a>
-			<a href="https://www.instagram.com/wangamafoundation/?hl=en"><img class="social" src="images/instagram.png" alt="instagram icon" title="instagram icon"></a>
+			<a target="_blank" href="https://www.facebook.com/WangamaFoundation/"><img class="social" src="images/facebook.png" alt="facebook icon" title="facebook"></a>
+			<a target="_blank" href="https://www.instagram.com/wangamafoundation/?hl=en"><img class="social" src="images/instagram.png" alt="instagram icon" title="instagram icon"></a>
 		</div>
-		<a href="mailto:wangama.foundation@gmail.com">wangama.foundation@gmail.com</a>
+		<a target="_blank" href="mailto:wangama.foundation@gmail.com">wangama.foundation@gmail.com</a>
 	</footer>
 </body>
 </html>
