--- a/orphans.html
+++ b/orphans.html
@@ -7,7 +7,7 @@
 	<!--[if lt IE 9]>
         <script src="bower_components/html5shiv/dist/html5shiv.js"></script>
     <![endif]-->
-	<title>Wangama Orphan & Disability Support</title>
+	<title>Orphan & Disability Support</title>
 </head>
 <body>
 	<header class="clearfix">
@@ -55,16 +55,20 @@
 			<li>Avocado tree project expansion and business development education </li>
 		</ul>
 	</section>
+	<section>
+		<h2>Other Education Projects</h2>
+		<p><a href="primary-school.html">Mdandu Primary School</a></p>
+	</section>
 	<section class="join">
 		<h2>Donate School Supplies & Books</h2>
 		<p>The Wangama Primary Schools are in need of school supplies (chalk, crayons, pencils, notebooks) and children and young adult books in English. If you are interested in donating these items, please contact <a href="mailto:wangama.foundation@gmail.com">wangama.foundation@gmail.com</a> for shipping instructions.</p>
 	</section>
 	<footer class="clearfix">
 		<div class="social">
-			<a href="https://www.facebook.com/WangamaFoundation/"><img class="social" src="images/facebook.png" alt="facebook icon" title="facebook"></a>
-			<a href="https://www.instagram.com/wangamafoundation/?hl=en"><img class="social" src="images/instagram.png" alt="instagram icon" title="instagram icon"></a>
+			<a target="_blank" href="https://www.facebook.com/WangamaFoundation/"><img class="social" src="images/facebook.png" alt="facebook icon" title="facebook"></a>
+			<a target="_blank" href="https://www.instagram.com/wangamafoundation/?hl=en"><img class="social" src="images/instagram.png" alt="instagram icon" title="instagram icon"></a>
 		</div>
-		<a href="mailto:wangama.foundation@gmail.com">wangama.foundation@gmail.com</a>
+		<a target="_blank" href="mailto:wangama.foundation@gmail.com">wangama.foundation@gmail.com</a>
 	</footer>
 </body>
 </html>
