--- a/primary-school.html
+++ b/primary-school.html
@@ -40,6 +40,10 @@
 			<img src="images/primary-dancing.jpg" alt="Villagers Dancing at the Primary School Project" title="Villagers Dancing at the Primary School Project">
 		</div>
 	</section>
+	<section>
+		<h2>Other Education Projects</h2>
+		<p><a href="orphans.html">Orphan & Disability Support</a></p>
+	</section>
 	<section class="join">
 		<h2>Join our mailing list!</h2>
 		<p>Stay updated on how you can help with the Mdandu Primary School project and our other ongoing education projects.</p>
@@ -51,10 +55,10 @@
 	</section>
 	<footer class="clearfix">
 		<div class="social">
-			<a href="https://www.facebook.com/WangamaFoundation/"><img class="social" src="images/facebook.png" alt="facebook icon" title="facebook"></a>
-			<a href="https://www.instagram.com/wangamafoundation/?hl=en"><img class="social" src="images/instagram.png" alt="instagram icon" title="instagram icon"></a>
+			<a target="_blank" href="https://www.facebook.com/WangamaFoundation/"><img class="social" src="images/facebook.png" alt="facebook icon" title="facebook"></a>
+			<a target="_blank" href="https://www.instagram.com/wangamafoundation/?hl=en"><img class="social" src="images/instagram.png" alt="instagram icon" title="instagram icon"></a>
 		</div>
-		<a href="mailto:wangama.foundation@gmail.com">wangama.foundation@gmail.com</a>
+		<a target="_blank" href="mailto:wangama.foundation@gmail.com">wangama.foundation@gmail.com</a>
 	</footer>
 </body>
 </html>
