--- a/women.html
+++ b/women.html
@@ -7,7 +7,7 @@
 	<!--[if lt IE 9]>
         <script src="bower_components/html5shiv/dist/html5shiv.js"></script>
     <![endif]-->
-	<title>Avocado Trees</title>
+	<title>Women's Empowerment</title>
 </head>
 <body>
 	<header class="clearfix">
@@ -24,42 +24,42 @@
 			<a href="donate.html" class="donate" id="donate-nav">Donate</a>
 		</nav>
 	</header>
-	<div id="environment-header">
-		<h1>Avocado Trees</h1>
-		<a class="donate" id="donate-header" href="donate.html">DONATE</a>
-	</div>
-	<section id="side-by-side" class="clearfix">
+		<div id="environment-header">
+			<h1>Women's Empowerment</h1>
+			<a class="donate" id="donate-header" href="donate.html">DONATE</a>
+		</div>
+	<section class="clearfix">
 		<div id="copy">
-			<h2>About</h2>
-			<p>Avocados are not only tasty, they are a wonderful source of nutrition and income for families in Wangama. There is increasingly a demand for avocados in nearby towns and families benefit greatly from selling this fruit. Our Avocado Tree Project began in 2018 and continues to flourish.</p>
-			<p>In 2019, the orphans groups at each of the 3 primary schools in Wangama joined the Avocado Tree Project for income generation for the orphans groups. Funds from avocado sales will be used to purchase uniforms, school supplies, and savings for technical or secondary school education.</p>
-			<h2>Tree Distribution</h2>
-			<ul>
-				<li>64 trees to 48 families</li>
-				<li>1 avocado tree was planted in the courtyard of the Health Center to commemorate the growing health of Wangama </li>
-				<li>Orphans groups at the 3 primary schools received 33 trees each (99 trees total) </li>
-			</ul>
+			<h2>Women's Group Chicken Raising</h2>
+			<p>Three women's empowerment groups were created in 2008 as part of a Peace Corps project. To this day, the groups meet and engage in income-generating projects, including fish ponds. </p>
+			<p>Wangama Foundation currently supports the Wangama Village Women's Group chicken raising project. This group raises chickens and sells the chickens and eggs throughout the village. The group identified a desire to learn more about business management as they continue to expand and develop.</p>
 		</div>
 		<div id="photo">
-			<img src="images/avocado-tree-recipient.jpg" alt="A recipient of an Avocado tree" title="Avocado Tree Recipient">
-			<img src="images/avocado-tree-recipient-2.jpg" alt="A recipient of an Avocado tree" title="Avocado Tree Recipient">
+			<img class src="images/group-women.jpg" alt="Women's Empowerment group in wangama" title="Women's Empowerment group in wangama">
+			<img class src="images/chickens.jpg" alt="chickens in the Women's Group Chicken Raising project" title="Women's Group Chickens">
+			<img class src="images/women-chickens.jpg" alt="Women's Group Chicken Raising project" title="Women's Group with the chickens">
 		</div>
 	</section>
 	<section id="waystohelp">
+		<h2 id="blue">Wangama Foundation Contributions</h2>
+		<ul>
+			<li>20 chickens (2018)</li>
+			<li>100 chickens and feed (2019)</li>
+		</ul>
 		<h2 id="donate">Future Plans</h2>
 		<ul>
-			<li>Continue to grow the avocado tree project by increasing tree distribution</li>
-			<li>Work with agricultural office to increase education on avocado harvesting and selling </li>
+			<li>Egg incubator </li>
+			<li>Income-generation and business management education</li>
 		</ul>
 	</section>
 	<section>
 		<h2>Other Environment Projects</h2>
-		<p><a href="women.html">Women's Empowerment</a></p>
 		<p><a href="renewable-energy.html">Renewable Energy</a></p>
+		<p><a href="avocado.html">Avocado Trees</a></p>
 	</section>
 	<section class="join">
 		<h2>Join our mailing list!</h2>
-		<p>Stay updated on how you can help with our ongoing environment projects.</p>
+		<p>Stay updated on how you can help with the Women's Group Chicken Raising project and other women's empowerment activities in Wangama.</p>
 		<form>
 			<label for="emailAddress">Email:</label><br>
 			<input type="email" id="emailAddress">				
