other header changes

--- a/about.html
+++ b/about.html
@@ -33,7 +33,7 @@
 		<section id="about">
 			<h2>About Us</h2>
 			<p>The Ward (i.e. County) of Wangama is located in the Southern Highlands of the East African country of Tanzania. The Wabena tribe are predominant in Wangama and both Kiswahili and the tribal language, Kibena, are spoken. Located in the fertile Kipengere Mountains, Wangama is a well-established farming community, harvesting crops such as potatoes, maize, onions, tomatoes, carrots, avocados, spinach, and much more. While the soil is lush, the rural setting of Wangama can pose challenges to the availability of health, education, and environmental resources. Wangama Foundation was established in 2017, along with completed construction of the HIV/AIDS Clinic, in order to continue supporting the health, education and environment sectors in the village. Wangama Foundation was founded by a former Peace Corps Volunteer and her Peace Corps village counterpart.</p>
-			<img src="images/wangama-school.jpg" alt="kids in wangama in front of school" title="wangama children">
+			<img src="images/wangama-board.jpg" alt="walking through the corn in wangama" title="wangama foundation members">
 		</section>
 		<section id="board">
 			<h2>Board</h2>
